tests/baselines/reference/errorTypesAsTypeArguments.errors.txt
==== tests/cases/compiler/errorTypesAsTypeArguments.ts (2 errors) ====
    interface Foo<A> {
      bar(baz: Foo<B>): Foo<C>;
                   ~
!!! error TS2304: Cannot find name 'B'.
                            ~
!!! error TS2304: Cannot find name 'C'.
    }